--- a/config
+++ b/config
@@ -6,7 +6,7 @@
 	ignorecase = true
 	precomposeunicode = true
 [remote "origin"]
-	url = https://teinei:gh103104@github.com/teinei/pennweb.git
+	url = https://teinei:gh103104@github.com/teinei/pennweb2.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [branch "master"]
 	remote = origin
